lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__no_interface_clients.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    (
        (
            "fs-MDT0000",
            Mdt,
        ),
        0,
    ),
    "",
)
