lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__ost_client_count_parser.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0000",
                    ),
                    value: 2,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0001",
                    ),
                    value: 1,
                },
            ),
        ),
    ],
    "",
)
